Curves editmode handles are displayed in sculptmode #119686

Closed
opened 2024-03-20 07:39:34 +01:00 by nazir · 4 comments

System Information
Operating system: Windows-10-10.0.22635-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-19 21:38, hash: e53d4e423ec4
Worked: (newest version of Blender that worked as expected)

Exact steps for others to reproduce the error

  1. Add any mesh, as well as a curves object.
  2. Go to curve editing mode and go to adding curves using the Draw tool.
  3. Select curve type as Bezier and draw the curve
  4. Handles for control will be displayed for the curve points.
  5. Go to curve sculpt mode and select the curves.
  6. In curve sculpting mode, lines corresponding to handles for controlling points in Edit Mode will be displayed
  7. If you enter object mode, the display of curve handles will disappear
**System Information** Operating system: Windows-10-10.0.22635-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-19 21:38, hash: `e53d4e423ec4` Worked: (newest version of Blender that worked as expected) **Exact steps for others to reproduce the error** 1. Add any mesh, as well as a curves object. 2. Go to curve editing mode and go to adding curves using the Draw tool. 3. Select curve type as Bezier and draw the curve 4. Handles for control will be displayed for the curve points. 5. Go to curve sculpt mode and select the curves. 6. In curve sculpting mode, lines corresponding to handles for controlling points in Edit Mode will be displayed 7. If you enter object mode, the display of curve handles will disappear
nazir added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-20 07:39:35 +01:00
Member

Can confirm.

!119679 is probably not the right PR though? (will check)

Can confirm. !119679 is probably not the right PR though? (will check)
Member

I think you mean 15dbfe54e4 / !119053 ?

Anyhow, handles seems to be in early stages (you cant even select or do anything with them it seems)

@laurynas : coul you check on the drawing issue?

CC @JacquesLucke

I think you mean 15dbfe54e46fa60e3efabec70fba692d3577f157 / !119053 ? Anyhow, handles seems to be in early stages (you cant even select or do anything with them it seems) @laurynas : coul you check on the drawing issue? CC @JacquesLucke
Philipp Oeser changed title from Curves are displayed incorrectly after adding the functionality from PR119679 to Curves editmode handles are displayed in sculptmode 2024-03-20 09:26:12 +01:00
Contributor

@JacquesLucke It looks like same GPUBatch *edit_handles; isn't suitable for Cage overlay.
The only fix I see would be to create a new one with the same vertex buffer, but different index buffer.
To hack the existing GPUBatch to suite both seems overwhelming.

Also, is control point selection info needed to be shown Cage overlay?

@JacquesLucke It looks like same `GPUBatch *edit_handles;` isn't suitable for Cage overlay. The only fix I see would be to create a new one with the same vertex buffer, but different index buffer. To hack the existing `GPUBatch` to suite both seems overwhelming. Also, is control point selection info needed to be shown Cage overlay?
Member

@laurynas Ideally just bring back the old behavior from curves sculpt mode for now. Creating a separate GPUBatch is totally fine.

@laurynas Ideally just bring back the old behavior from curves sculpt mode for now. Creating a separate `GPUBatch` is totally fine.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-21 12:24:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119686
No description provided.