Fix #119686: curves editmode handles are displayed in sculptmode

Curves cage overlay for sculpt mode restored to prior #119053 state.

Pull Request: https://projects.blender.org/blender/blender/pulls/119717